[package]
name = "mojio_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = { version = "0.24.0", features = ["geo-types"] }
polyline = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json", "cookies"]}
